[package]
name = "merge-it-derive"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
description = "Proc macro logic for the merge-it crate"

[package.metadata.docs]
rs = { all-features = true, rustdoc-args = ["--cfg", "docsrs"] }

[dev-dependencies]
merge-it = { path = "../prelude/" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }
syn-utils = "0.5"
